--- a/requirements.txt
+++ b/requirements.txt
@@ -91,3 +91,213 @@ six==1.11.0
 urllib3==1.22
 watchgod==0.1.1
 yarl==1.2.2
+aiodns==1.1.1
+aiohttp==3.0.1
+aiohttp-cors==0.7.0
+aiohttp-debugtoolbar==0.5.0
+aiohttp-devtools==0.9
+aiohttp-jinja2==0.15.0
+aiohttp-session==2.2.0
+aiohttp-swagger==1.0.5
+aiojobs==0.2.1
+aioredis==1.1.0
+asn1crypto==0.24.0
+astroid==1.6.5
+async-timeout==2.0.1
+atpublic==1.0
+attrs==17.4.0
+cachetools==2.0.1
+cchardet==2.1.1
+certifi==2018.4.16
+cffi==1.11.5
+chardet==3.0.4
+click==6.7
+coverage==4.5.1
+cryptography==2.2.2
+dill==0.2.7.1
+feedparser==5.2.1
+future==0.16.0
+futures==3.1.1
+gapic-google-cloud-datastore-v1==0.15.3
+gapic-google-cloud-error-reporting-v1beta1==0.15.3
+gapic-google-cloud-logging-v2==0.91.3
+google-api-core==0.1.4
+google-auth==1.4.1
+google-cloud==0.32.0
+google-cloud-bigquery==0.28.0
+google-cloud-bigquery-datatransfer==0.1.1
+google-cloud-bigtable==0.28.1
+google-cloud-container==0.1.1
+google-cloud-core==0.28.1
+google-cloud-datastore==1.4.0
+google-cloud-dns==0.28.0
+google-cloud-error-reporting==0.28.0
+google-cloud-firestore==0.28.0
+google-cloud-language==1.0.2
+google-cloud-logging==1.4.0
+google-cloud-monitoring==0.28.1
+google-cloud-pubsub==0.30.1
+google-cloud-resource-manager==0.28.1
+google-cloud-runtimeconfig==0.28.1
+google-cloud-spanner==0.29.0
+google-cloud-speech==0.30.0
+google-cloud-storage==1.6.0
+google-cloud-trace==0.17.0
+google-cloud-translate==1.3.1
+google-cloud-videointelligence==1.0.1
+google-cloud-vision==0.29.0
+google-gax==0.15.16
+google-resumable-media==0.3.1
+googleapis-common-protos==1.5.3
+grpc-google-iam-v1==0.11.4
+grpcio==1.11.0
+gunicorn==19.8.1
+hiredis==0.2.0
+httplib2==0.11.3
+idna==2.6
+idna-ssl==1.0.1
+isort==4.3.4
+Jinja2==2.10
+lazy-object-proxy==1.3.1
+MarkupSafe==1.0
+marshmallow==3.0.0b9
+mccabe==0.6.1
+motor==1.2.1
+multidict==4.2.0
+oauth2client==3.0.0
+paho-mqtt==1.3.1
+pluggy==0.6.0
+ply==3.8
+proto-google-cloud-datastore-v1==0.90.4
+proto-google-cloud-error-reporting-v1beta1==0.15.3
+proto-google-cloud-logging-v2==0.91.3
+protobuf==3.5.2.post1
+psutil==5.4.5
+py==1.5.3
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
+pycares==2.3.0
+pycparser==2.18
+pycrypto==2.6.1
+pylint==1.9.2
+pymongo==3.6.1
+pytest==3.4.0
+pytest-aiohttp==0.3.0
+pytest-cov==2.5.1
+python-telegram-bot==10.1.0
+pytz==2018.4
+PyYAML==3.12
+requests==2.18.4
+rsa==3.4.2
+six==1.11.0
+telegram==0.0.1
+transitions==0.6.8
+urllib3==1.22
+watchgod==0.1.1
+wrapt==1.10.11
+yarl==1.2.2
+aiodns==1.1.1
+aiohttp==3.0.1
+aiohttp-cors==0.7.0
+aiohttp-debugtoolbar==0.5.0
+aiohttp-devtools==0.9
+aiohttp-jinja2==0.15.0
+aiohttp-session==2.2.0
+aiohttp-swagger==1.0.5
+aiojobs==0.2.1
+aioredis==1.1.0
+asn1crypto==0.24.0
+astroid==1.6.5
+async-timeout==2.0.1
+atpublic==1.0
+attrs==17.4.0
+cachetools==2.0.1
+cchardet==2.1.1
+certifi==2018.4.16
+cffi==1.11.5
+chardet==3.0.4
+click==6.7
+coverage==4.5.1
+cryptography==2.2.2
+dill==0.2.7.1
+feedparser==5.2.1
+future==0.16.0
+futures==3.1.1
+gapic-google-cloud-datastore-v1==0.15.3
+gapic-google-cloud-error-reporting-v1beta1==0.15.3
+gapic-google-cloud-logging-v2==0.91.3
+google-api-core==0.1.4
+google-auth==1.4.1
+google-cloud==0.32.0
+google-cloud-bigquery==0.28.0
+google-cloud-bigquery-datatransfer==0.1.1
+google-cloud-bigtable==0.28.1
+google-cloud-container==0.1.1
+google-cloud-core==0.28.1
+google-cloud-datastore==1.4.0
+google-cloud-dns==0.28.0
+google-cloud-error-reporting==0.28.0
+google-cloud-firestore==0.28.0
+google-cloud-language==1.0.2
+google-cloud-logging==1.4.0
+google-cloud-monitoring==0.28.1
+google-cloud-pubsub==0.30.1
+google-cloud-resource-manager==0.28.1
+google-cloud-runtimeconfig==0.28.1
+google-cloud-spanner==0.29.0
+google-cloud-speech==0.30.0
+google-cloud-storage==1.6.0
+google-cloud-trace==0.17.0
+google-cloud-translate==1.3.1
+google-cloud-videointelligence==1.0.1
+google-cloud-vision==0.29.0
+google-gax==0.15.16
+google-resumable-media==0.3.1
+googleapis-common-protos==1.5.3
+grpc-google-iam-v1==0.11.4
+grpcio==1.11.0
+gunicorn==19.8.1
+hiredis==0.2.0
+httplib2==0.11.3
+idna==2.6
+idna-ssl==1.0.1
+isort==4.3.4
+Jinja2==2.10
+lazy-object-proxy==1.3.1
+MarkupSafe==1.0
+marshmallow==3.0.0b9
+mccabe==0.6.1
+motor==1.2.1
+multidict==4.2.0
+oauth2client==3.0.0
+paho-mqtt==1.3.1
+pluggy==0.6.0
+ply==3.8
+proto-google-cloud-datastore-v1==0.90.4
+proto-google-cloud-error-reporting-v1beta1==0.15.3
+proto-google-cloud-logging-v2==0.91.3
+protobuf==3.5.2.post1
+psutil==5.4.5
+py==1.5.3
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
+pycares==2.3.0
+pycparser==2.18
+pycrypto==2.6.1
+pylint==1.9.2
+pymongo==3.6.1
+pytest==3.4.0
+pytest-aiohttp==0.3.0
+pytest-cov==2.5.1
+python-telegram-bot==10.1.0
+pytz==2018.4
+PyYAML==3.12
+requests==2.18.4
+rsa==3.4.2
+six==1.11.0
+telegram==0.0.1
+transitions==0.6.8
+urllib3==1.22
+watchgod==0.1.1
+wrapt==1.10.11
+yarl==1.2.2
